--- a/app/src/main/res/layout/lessons_element.xml
+++ b/app/src/main/res/layout/lessons_element.xml
@@ -4,6 +4,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
 xmlns:android = "http://schemas.android.com/apk/res/android"
 xmlns:app = "http://schemas.android.com/apk/res-auto"
+android:id = "@+id/template_background"
 android:layout_width = "match_parent"
 android:layout_height = "wrap_content"
 android:background = "@drawable/lesson_element_is_selected">
@@ -12,14 +13,14 @@ android:background = "@drawable/lesson_element_is_selected">
 	android:id = "@+id/template_number"
 	android:layout_width = "0dp"
 	android:layout_height = "match_parent"
+	android:layout_margin = "1dp"
 	android:fontFamily = "georgia"
 	android:gravity = "center"
 	android:textSize = "@dimen/small_text_size"
+	app:layout_constraintBottom_toBottomOf = "parent"
 	app:layout_constraintHorizontal_weight = "1"
-	app:layout_constraintBottom_toBottomOf="parent"
 	app:layout_constraintLeft_toLeftOf = "parent"
 	app:layout_constraintRight_toLeftOf = "@id/template_name"
-	android:layout_margin="1dp"
 	app:layout_constraintTop_toTopOf = "parent"/>
 
 	<!-- Название пары. -->
@@ -27,13 +28,13 @@ android:background = "@drawable/lesson_element_is_selected">
 	android:id = "@+id/template_name"
 	android:layout_width = "0dp"
 	android:layout_height = "match_parent"
+	android:layout_margin = "1dp"
 	android:fontFamily = "georgia"
 	android:gravity = "center"
 	android:textSize = "@dimen/small_text_size"
-	android:layout_margin="1dp"
+	app:layout_constraintBottom_toBottomOf = "parent"
 	app:layout_constraintHorizontal_weight = "4"
 	app:layout_constraintLeft_toRightOf = "@id/template_number"
-	app:layout_constraintBottom_toBottomOf="parent"
 	app:layout_constraintRight_toLeftOf = "@id/template_teacher"
 	app:layout_constraintTop_toTopOf = "parent"/>
 
@@ -42,13 +43,13 @@ android:background = "@drawable/lesson_element_is_selected">
 	android:id = "@+id/template_teacher"
 	android:layout_width = "0dp"
 	android:layout_height = "match_parent"
+	android:layout_margin = "1dp"
 	android:fontFamily = "georgia"
 	android:gravity = "center"
 	android:textSize = "@dimen/small_text_size"
-	android:layout_margin="1dp"
+	app:layout_constraintBottom_toBottomOf = "parent"
 	app:layout_constraintHorizontal_weight = "3"
 	app:layout_constraintLeft_toRightOf = "@id/template_name"
-	app:layout_constraintBottom_toBottomOf="parent"
 	app:layout_constraintRight_toLeftOf = "@id/template_place"
 	app:layout_constraintTop_toTopOf = "parent"/>
 
@@ -57,11 +58,11 @@ android:background = "@drawable/lesson_element_is_selected">
 	android:id = "@+id/template_place"
 	android:layout_width = "0dp"
 	android:layout_height = "match_parent"
+	android:layout_margin = "1dp"
 	android:fontFamily = "georgia"
-	android:layout_margin="1dp"
 	android:gravity = "center"
 	android:textSize = "@dimen/small_text_size"
-	app:layout_constraintBottom_toBottomOf="parent"
+	app:layout_constraintBottom_toBottomOf = "parent"
 	app:layout_constraintHorizontal_weight = "2"
 	app:layout_constraintLeft_toRightOf = "@id/template_teacher"
 	app:layout_constraintRight_toRightOf = "parent"
