--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
 
 	<color name = "lesson_element_border_selected">#D5F0F8</color>
 	<color name = "lesson_element_middle_selected">#74CFE9</color>
+
+	<color name = "lesson_changed">#f5deb3</color>
 </resources>
